rearrange possible words

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="wordbox.js"></script>
     <script src="wordbundle.js"></script>
     <script src="wordChar.js"></script>
+    <script src="wordprop.js"></script>
     <style>
         body {
             margin: 1;
