--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
     <title>Wordle Solver</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="sketch.js"></script>
@@ -11,6 +12,7 @@
     <script src="wordbundle.js"></script>
     <script src="wordChar.js"></script>
     <script src="wordprop.js"></script>
+    <script src="answerInput.js"></script>
     <style>
         body {
             margin: 1;
