--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
+    <!-- <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"> -->
     <title>Wordle Solver</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="sketch.js"></script>
@@ -21,8 +21,28 @@
         canvas {
             margin: auto;
             border: 2px solid black;
+            touch-action: manipulation;
         }
+
+        * {
+            touch-action: manipulation;
+        }
+
     </style>
+
+    <script>
+        // prevent zooming from double tapping on iOS
+        window.lastTouchTimestamp = 0;
+        document.addEventListener('touchstart', function (event) {
+        const nowTouchTimestamp = new Date().getTime();
+        const tapDelayThreshold = 300;
+        const tapDelay = nowTouchTimestamp - window.lastTouchTimestamp;
+            if (tapDelay <= tapDelayThreshold) {
+                event.preventDefault();
+            }
+            window.lastTouchTimestamp = nowTouchTimestamp;
+        }, { passive: false });
+    </script>
 </head>
 <body>
     
